tests/NormalTests/paczka1/small_fuzzy/22781581.err
Error in line 1: hAFRDB70qq A487 2L,7
Error in line 5: hAFRDB70qq A487 65,8
